rotten flesh block

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -75,6 +75,7 @@
   "block.xoverhaul.green_concrete_stairs": "Green Concrete Stairs",
   "block.xoverhaul.red_concrete_stairs": "Red Concrete Stairs",
   "block.xoverhaul.black_concrete_stairs": "Black Concrete Stairs",
+  "block.xoverhaul.rotten_flesh_block": "Rotten Flesh Block",
 
 
 
