--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -77,6 +77,9 @@
   "block.xoverhaul.black_concrete_stairs": "Black Concrete Stairs",
   "block.xoverhaul.rotten_flesh_block": "Rotten Flesh Block",
 
+  "block.xoverhaul.dirt_slab": "Dirt Slab",
+  "block.xoverhaul.grass_block_slab": "Grass Block Slab",
+
 
 
 
