Soul Netherrack and Soul Nether Bricks

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -76,9 +76,10 @@
   "block.xoverhaul.red_concrete_stairs": "Red Concrete Stairs",
   "block.xoverhaul.black_concrete_stairs": "Black Concrete Stairs",
   "block.xoverhaul.rotten_flesh_block": "Rotten Flesh Block",
-
   "block.xoverhaul.dirt_slab": "Dirt Slab",
   "block.xoverhaul.grass_block_slab": "Grass Block Slab",
+  "block.xoverhaul.soul_netherrack": "Soul Netherrack",
+  "block.xoverhaul.soul_nether_bricks": "Soul Nether Bricks",
 
 
 
