--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -80,6 +80,7 @@
   "block.xoverhaul.grass_block_slab": "Grass Block Slab",
   "block.xoverhaul.soul_netherrack": "Soul Netherrack",
   "block.xoverhaul.soul_nether_bricks": "Soul Nether Bricks",
+  "block.xoverhaul.ender_flower": "Ender Flower",
 
 
 
