cooked tropical fish

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -36,6 +36,7 @@
   "item.xoverhaul.stripped_crimson_bark": "Stripped Crimson Bark",
   "item.xoverhaul.stripped_warped_bark": "Stripped Warped Bark",
   "item.xoverhaul.scraper": "Scraper",
+  "item.xoverhaul.cooked_tropical_fish": "Cooked Tropical Fish",
 
 
 
