every color tulip

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -82,8 +82,18 @@
   "block.xoverhaul.soul_netherrack": "Soul Netherrack",
   "block.xoverhaul.soul_nether_bricks": "Soul Nether Bricks",
   "block.xoverhaul.ender_flower": "Ender Flower",
-
-
+  "block.xoverhaul.magenta_tulip": "Magenta Tulip",
+  "block.xoverhaul.light_blue_tulip": "Light Blue Tulip",
+  "block.xoverhaul.yellow_tulip": "Yellow Tulip",
+  "block.xoverhaul.lime_tulip": "Lime Tulip",
+  "block.xoverhaul.gray_tulip": "Gray Tulip",
+  "block.xoverhaul.light_gray_tulip": "Light Gray Tulip",
+  "block.xoverhaul.cyan_tulip": "Cyan Tulip",
+  "block.xoverhaul.purple_tulip": "Purple Tulip",
+  "block.xoverhaul.blue_tulip": "Blue Tulip",
+  "block.xoverhaul.brown_tulip": "Brown Tulip",
+  "block.xoverhaul.green_tulip": "Green Tulip",
+  "block.xoverhaul.black_tulip": "Black Tulip",
 
 
 
