--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -94,6 +94,7 @@
   "block.xoverhaul.brown_tulip": "Brown Tulip",
   "block.xoverhaul.green_tulip": "Green Tulip",
   "block.xoverhaul.black_tulip": "Black Tulip",
+  "block.xoverhaul.ender_end_stone": "Ender End Stone",
 
 
 
