--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -99,6 +99,8 @@
   "block.xoverhaul.crimson_sprouts": "Crimson Sprouts",
 
 
+ "entity.xoverhaul.chained_zombie": "Chained Zombie",
+
 
   "itemGroup.xoverhaul.xoverhaul_items": "XOverhaul Items",
   "itemGroup.xoverhaul.xoverhaul_blocks": "XOverhaul Blocks",
