recipe removed item, tree fungus

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -115,6 +115,8 @@
   "itemGroup.xoverhaul.xoverhaul_spawn_eggs": "XOverhaul Spawn Eggs",
 
 
+  "tooltip.xoverhaul.recipe_removed_item_1": "Recipe removed by XOverhaul Mod.",
+  "tooltip.xoverhaul.recipe_removed_item_2": "Check the XOverhaul Guidebook for more information.",
 
   "block.minecraft.nether_wart_block": "Crimson Cap Block",
   "block.minecraft.warped_wart_block": "Warped Cap Block",
