--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -117,6 +117,7 @@
 
   "tooltip.xoverhaul.recipe_removed_item_1": "Recipe removed by XOverhaul Mod.",
   "tooltip.xoverhaul.recipe_removed_item_2": "Check the XOverhaul Guidebook for more information.",
+  "tooltip.xoverhaul.scraper": "Not consumed after used on crafting.",
 
   "block.minecraft.nether_wart_block": "Crimson Cap Block",
   "block.minecraft.warped_wart_block": "Warped Cap Block",
