turtle leash, translations

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -100,6 +100,65 @@
   "block.xoverhaul.bedrock_stairs": "Bedrock Stairs",
   "block.xoverhaul.crimson_sprouts": "Crimson Sprouts",
   "block.xoverhaul.wooden_crate": "Wooden Crate",
+  "block.xoverhaul.bedrock_wall": "Bedrock Wall",
+  "block.xoverhaul.smooth_stone_stairs": "Smooth Stone Stairs",
+  "block.xoverhaul.smooth_stone_wall": "Smooth Stone Wall",
+  "block.xoverhaul.cracked_stone_brick_slab": "Cracked Stone Brick Slab",
+  "block.xoverhaul.cracked_stone_brick_stairs": "Cracked Stone Brick Stairs",
+  "block.xoverhaul.cracked_stone_brick_wall": "Cracked Stone Brick Wall",
+  "block.xoverhaul.chiseled_stone_brick_slab": "Chiseled Stone Brick Slab",
+  "block.xoverhaul.chiseled_stone_brick_stairs": "Chiseled Stone Brick Stairs",
+  "block.xoverhaul.chiseled_stone_brick_wall": "Chiseled Stone Brick Wall",
+  "block.xoverhaul.netherrack_slab": "Netherrack Slab",
+  "block.xoverhaul.netherrack_stairs": "Netherrack Stairs",
+  "block.xoverhaul.netherrack_wall": "Netherrack Wall",
+  "block.xoverhaul.cut_sandstone_stairs": "Cut Sandstone Stairs",
+  "block.xoverhaul.cut_sandstone_wall": "Cut Sandstone Wall",
+  "block.xoverhaul.smooth_sandstone_wall": "Smooth Sandstone Wall",
+  "block.xoverhaul.chiseled_sandstone_slab": "Chiseled Sandstone Stairs",
+  "block.xoverhaul.chiseled_sandstone_stairs": "Chiseled Sandstone Stairs",
+  "block.xoverhaul.chiseled_sandstone_wall": "Chiseled Sandstone Wall",
+  "block.xoverhaul.cut_red_sandstone_stairs": "Cut Red Sandstone Stairs",
+  "block.xoverhaul.cut_red_sandstone_wall": "Cut Red Sandstone Wall",
+  "block.xoverhaul.smooth_red_sandstone_wall": "Smooth Red Sandstone Wall",
+  "block.xoverhaul.chiseled_red_sandstone_slab": "Chiseled Red Sandstone Stairs",
+  "block.xoverhaul.chiseled_red_sandstone_stairs": "Chiseled Red Sandstone Stairs",
+  "block.xoverhaul.chiseled_red_sandstone_wall": "Chiseled Red Sandstone Wall",
+  "block.xoverhaul.end_stone_slab": "End Stone Slab",
+  "block.xoverhaul.end_stone_stairs": "End Stone Stairs",
+  "block.xoverhaul.end_stone_wall": "End Stone Wall",
+  "block.xoverhaul.polished_granite_wall": "Polished Granite Wall",
+  "block.xoverhaul.polished_diorite_wall": "Polished Diorite Wall",
+  "block.xoverhaul.polished_andesite_wall": "Polished Andesite Wall",
+  "block.xoverhaul.purpur_block_wall": "Purpur Block Wall",
+  "block.xoverhaul.basalt_slab": "Basalt Slab",
+  "block.xoverhaul.basalt_stairs": "Basalt Stairs",
+  "block.xoverhaul.basalt_wall": "Basalt Wall",
+  "block.xoverhaul.cracked_polished_blackstone_brick_slab": "Cracked Polished Blackstone Brick Slab",
+  "block.xoverhaul.cracked_polished_blackstone_brick_stairs": "Cracked Polished Blackstone Brick Stairs",
+  "block.xoverhaul.cracked_polished_blackstone_brick_wall": "Cracked Polished Blackstone Brick Wall",
+  "block.xoverhaul.chiseled_polished_blackstone_slab": "Chiseled Polished Blackstone Slab",
+  "block.xoverhaul.chiseled_polished_blackstone_stairs": "Chiseled Polished Blackstone Stairs",
+  "block.xoverhaul.chiseled_polished_blackstone_wall": "Chiseled Polished Blackstone Wall",
+  "block.xoverhaul.obsidian_slab": "Obsidian Slab",
+  "block.xoverhaul.obsidian_stairs": "Obsidian Stairs",
+  "block.xoverhaul.obsidian_wall": "Obsidian Wall",
+  "block.xoverhaul.quartz_block_wall": "Quartz Block Wall",
+  "block.xoverhaul.chiseled_quartz_block_slab": "Chiseled Quartz Block Slab",
+  "block.xoverhaul.chiseled_quartz_block_stairs": "Chiseled Quartz Block Stairs",
+  "block.xoverhaul.chiseled_quartz_block_wall": "Chiseled Quartz Block Wall",
+  "block.xoverhaul.smooth_quartz_wall": "Smooth Quartz Block Wall",
+  "block.xoverhaul.quartz_brick_slab": "Quartz Brick Slab",
+  "block.xoverhaul.quartz_brick_stairs": "Quartz Brick Stairs",
+  "block.xoverhaul.quartz_brick_wall": "Quartz Brick Wall",
+  "block.xoverhaul.cracked_nether_brick_slab": "Cracked Nether Brick Slab",
+  "block.xoverhaul.cracked_nether_brick_stairs": "Cracked Nether Brick Stairs",
+  "block.xoverhaul.cracked_nether_brick_wall": "Cracked Nether Brick Wall",
+  "block.xoverhaul.chiseled_nether_brick_slab": "Chiseled Nether Brick Slab",
+  "block.xoverhaul.chiseled_nether_brick_stairs": "Chiseled Nether Brick Stairs",
+  "block.xoverhaul.chiseled_nether_brick_wall": "Chiseled Nether Brick Wall",
+  "block.xoverhaul.tree_fungus": "Tree Fungus",
+  "block.xoverhaul.birch_flower": "Birch Flower",
 
 
   "entity.xoverhaul.chained_monster": "Chained Monster",
@@ -117,13 +176,7 @@
 
   "tooltip.xoverhaul.recipe_removed_item_1": "Recipe removed by XOverhaul Mod.",
   "tooltip.xoverhaul.recipe_removed_item_2": "Check the XOverhaul Guidebook for more information.",
-  "tooltip.xoverhaul.scraper": "Not consumed after used on crafting.",
-
-  "block.minecraft.nether_wart_block": "Crimson Cap Block",
-  "block.minecraft.warped_wart_block": "Warped Cap Block",
-  "block.minecraft.nether_sprouts": "Warped Sprouts"
-
-
+  "tooltip.xoverhaul.scraper": "Not consumed after used on crafting."
 
 
 
