--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -17,7 +17,8 @@
   "advancements.xoverhaul.progression.root.title": "XOverhaul Progression",
   "advancements.xoverhaul.progression.son_of_the_leather.description": "Kill a Leatherling and get Leather Armor Pieces",
   "advancements.xoverhaul.progression.son_of_the_leather.title": "Son of the Leather",
-
+  "advancements.xoverhaul.progression.king_of_the_village.description": "Craft a Village Crown and guide them all",
+  "advancements.xoverhaul.progression.king_of_the_village.title": "King of the Village",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
