basic glazed terracota, heads pickaxe tool

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -207,8 +207,9 @@
   "block.xoverhaul.yellow_terracota_stairs": "Yellow Terracota Stairs",
   "block.xoverhaul.yellow_terracota_wall": "Yellow Terracota Wall",
   "block.xoverhaul.yellow_tulip": "Yellow Tulip",
+  "block.xoverhaul.glazed_terracotta": "Glazed Terracotta",
 
-  "entity.xoverhaul.chained_monster": "Chained Monster",
+  "entity.xoverhaul. chained_monster": "Chained Monster",
   "entity.xoverhaul.leatherling": "Leatherling",
 
   "item.xoverhaul.acacia_bark": "Acacia Bark",
