--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -254,6 +254,7 @@
   "item.xoverhaul.woodstone_chestplate": "Woodstone Chestplate",
   "item.xoverhaul.woodstone_helmet": "Woodstone Helmet",
   "item.xoverhaul.woodstone_leggings": "Woodstone Leggings",
+  "item.xoverhaul.village_crown": "Village Crown",
 
   "itemGroup.xoverhaul.xoverhaul_armors": "XOverhaul Armors",
   "itemGroup.xoverhaul.xoverhaul_blocks": "XOverhaul Blocks",
