--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -19,6 +19,16 @@
   "advancements.xoverhaul.progression.son_of_the_leather.title": "Son of the Leather",
   "advancements.xoverhaul.progression.king_of_the_village.description": "Craft a Village Crown and guide them all",
   "advancements.xoverhaul.progression.king_of_the_village.title": "King of the Village",
+  "advancements.xoverhaul.story.librarian.description": "Craft some Bookshelves to place around your Enchanting Table to power it",
+  "advancements.xoverhaul.story.librarian.title": "Librarian",
+  "advancements.xoverhaul.adventure.overpowered.description": "Obtain an Enchanted Golden Apple",
+  "advancements.xoverhaul.adventure.overpowered.title": "Overpowered",
+  "advancements.xoverhaul.adventure.on_a_rail.description": "Obtain a Minecart to travel via rails",
+  "advancements.xoverhaul.adventure.on_a_rail.title": "On A Rail",
+  "advancements.xoverhaul.adventure.skinned.description": "Obtain Leather",
+  "advancements.xoverhaul.adventure.skinned.title": "Skinned",
+  "advancements.xoverhaul.story.diamonds_to_you.description": "Drop a Diamond, then have a player or a mob pick it up",
+  "advancements.xoverhaul.story.diamonds_to_you.title": "Diamonds to you!",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
