--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -29,6 +29,10 @@
   "advancements.xoverhaul.adventure.skinned.title": "Skinned",
   "advancements.xoverhaul.story.diamonds_to_you.description": "Drop a Diamond, then have a player or a mob pick it up",
   "advancements.xoverhaul.story.diamonds_to_you.title": "Diamonds to you!",
+  "advancements.xoverhaul.adventure.when_pigs_fly.description": "Saddle a Pig while it has the Levitation effect",
+  "advancements.xoverhaul.adventure.when_pigs_fly.title": "When Pigs Fly",
+  "advancements.xoverhaul.adventure.overkill.description": "Deal 9 (or more) hearts of damage in a single hit",
+  "advancements.xoverhaul.adventure.overkill.title": "Overkill",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
