dispense this advancement

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -1,38 +1,40 @@
 {
+  "advancements.xoverhaul.adventure.on_a_rail.description": "Obtain a Minecart to travel via rails",
+  "advancements.xoverhaul.adventure.on_a_rail.title": "On A Rail",
+  "advancements.xoverhaul.adventure.overkill.description": "Deal 9 (or more) hearts of damage in a single hit",
+  "advancements.xoverhaul.adventure.overkill.title": "Overkill",
+  "advancements.xoverhaul.adventure.overpowered.description": "Obtain an Enchanted Golden Apple",
+  "advancements.xoverhaul.adventure.overpowered.title": "Overpowered",
+  "advancements.xoverhaul.adventure.skinned.description": "Obtain Leather",
+  "advancements.xoverhaul.adventure.skinned.title": "Skinned",
   "advancements.xoverhaul.adventure.time_to_strike.description": "Use planks and sticks to make a sword",
   "advancements.xoverhaul.adventure.time_to_strike.title": "Time to Strike!",
+  "advancements.xoverhaul.adventure.when_pigs_fly.description": "Saddle a Pig while it has the Levitation effect",
+  "advancements.xoverhaul.adventure.when_pigs_fly.title": "When Pigs Fly",
   "advancements.xoverhaul.husbandry.bake_bread.description": "Turn wheat into bread",
   "advancements.xoverhaul.husbandry.bake_bread.title": "Bake Bread",
   "advancements.xoverhaul.husbandry.the_lie.description": "Bake a cake using wheat, sugar, milk, and eggs! Or... buy it from a Villager",
   "advancements.xoverhaul.husbandry.the_lie.title": "The Lie",
   "advancements.xoverhaul.husbandry.time_to_farm.description": "Use planks and sticks to make a hoe",
   "advancements.xoverhaul.husbandry.time_to_farm.title": "Time to Farm!",
-  "advancements.xoverhaul.story.benchmarking.description": "Craft a Crafting Table with four planks",
-  "advancements.xoverhaul.story.benchmarking.title": "Benchmarking",
-  "advancements.xoverhaul.story.getting_wood.description": "Attack a tree until a block of wood pops out",
-  "advancements.xoverhaul.story.getting_wood.title": "Getting Wood",
-  "advancements.xoverhaul.story.hot_topic.description": "Craft a Furnace out of 8 blocks of any stone",
-  "advancements.xoverhaul.story.hot_topic.title": "Hot Topic",
+  "advancements.xoverhaul.progression.king_of_the_village.description": "Craft a Village Crown and guide them all",
+  "advancements.xoverhaul.progression.king_of_the_village.title": "King of the Village",
   "advancements.xoverhaul.progression.root.description": "Welcome to the XOverhaul mod, follow the advancements to get through the mod's progression!",
   "advancements.xoverhaul.progression.root.title": "XOverhaul Progression",
   "advancements.xoverhaul.progression.son_of_the_leather.description": "Kill a Leatherling and get Leather Armor Pieces",
   "advancements.xoverhaul.progression.son_of_the_leather.title": "Son of the Leather",
-  "advancements.xoverhaul.progression.king_of_the_village.description": "Craft a Village Crown and guide them all",
-  "advancements.xoverhaul.progression.king_of_the_village.title": "King of the Village",
-  "advancements.xoverhaul.story.librarian.description": "Craft some Bookshelves to place around your Enchanting Table to power it",
-  "advancements.xoverhaul.story.librarian.title": "Librarian",
-  "advancements.xoverhaul.adventure.overpowered.description": "Obtain an Enchanted Golden Apple",
-  "advancements.xoverhaul.adventure.overpowered.title": "Overpowered",
-  "advancements.xoverhaul.adventure.on_a_rail.description": "Obtain a Minecart to travel via rails",
-  "advancements.xoverhaul.adventure.on_a_rail.title": "On A Rail",
-  "advancements.xoverhaul.adventure.skinned.description": "Obtain Leather",
-  "advancements.xoverhaul.adventure.skinned.title": "Skinned",
+  "advancements.xoverhaul.story.benchmarking.description": "Craft a Crafting Table with four planks",
+  "advancements.xoverhaul.story.benchmarking.title": "Benchmarking",
   "advancements.xoverhaul.story.diamonds_to_you.description": "Drop a Diamond, then have a player or a mob pick it up",
   "advancements.xoverhaul.story.diamonds_to_you.title": "Diamonds to you!",
-  "advancements.xoverhaul.adventure.when_pigs_fly.description": "Saddle a Pig while it has the Levitation effect",
-  "advancements.xoverhaul.adventure.when_pigs_fly.title": "When Pigs Fly",
-  "advancements.xoverhaul.adventure.overkill.description": "Deal 9 (or more) hearts of damage in a single hit",
-  "advancements.xoverhaul.adventure.overkill.title": "Overkill",
+  "advancements.xoverhaul.story.getting_wood.description": "Attack a tree until a block of wood pops out",
+  "advancements.xoverhaul.story.getting_wood.title": "Getting Wood",
+  "advancements.xoverhaul.story.hot_topic.description": "Craft a Furnace out of 8 blocks of any stone",
+  "advancements.xoverhaul.story.hot_topic.title": "Hot Topic",
+  "advancements.xoverhaul.story.librarian.description": "Craft some Bookshelves to place around your Enchanting Table to improve it",
+  "advancements.xoverhaul.story.librarian.title": "Librarian",
+  "advancements.xoverhaul.adventure.dispense_this.description": "Obtain a Dispenser",
+  "advancements.xoverhaul.adventure.dispense_this.title": "Dispense This!",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
@@ -110,6 +112,7 @@
   "block.xoverhaul.end_stone_wall": "End Stone Wall",
   "block.xoverhaul.ender_end_stone": "Ender End Stone",
   "block.xoverhaul.ender_flower": "Ender Flower",
+  "block.xoverhaul.glazed_terracotta": "Glazed Terracotta",
   "block.xoverhaul.grass_block_slab": "Grass Block Slab",
   "block.xoverhaul.gray_concrete_slab": "Gray Concrete Slab",
   "block.xoverhaul.gray_concrete_stairs": "Gray Concrete Stairs",
@@ -221,7 +224,6 @@
   "block.xoverhaul.yellow_terracota_stairs": "Yellow Terracota Stairs",
   "block.xoverhaul.yellow_terracota_wall": "Yellow Terracota Wall",
   "block.xoverhaul.yellow_tulip": "Yellow Tulip",
-  "block.xoverhaul.glazed_terracotta": "Glazed Terracotta",
 
   "entity.xoverhaul. chained_monster": "Chained Monster",
   "entity.xoverhaul.leatherling": "Leatherling",
@@ -263,12 +265,12 @@
   "item.xoverhaul.stripped_oak_bark": "Stripped Oak Bark",
   "item.xoverhaul.stripped_spruce_bark": "Stripped Spruce Bark",
   "item.xoverhaul.stripped_warped_bark": "Stripped Warped Bark",
+  "item.xoverhaul.village_crown": "Village Crown",
   "item.xoverhaul.warped_bark": "Warped Bark",
   "item.xoverhaul.woodstone_boots": "Woodstone Boots",
   "item.xoverhaul.woodstone_chestplate": "Woodstone Chestplate",
   "item.xoverhaul.woodstone_helmet": "Woodstone Helmet",
   "item.xoverhaul.woodstone_leggings": "Woodstone Leggings",
-  "item.xoverhaul.village_crown": "Village Crown",
 
   "itemGroup.xoverhaul.xoverhaul_armors": "XOverhaul Armors",
   "itemGroup.xoverhaul.xoverhaul_blocks": "XOverhaul Blocks",
