--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "advancements.xoverhaul.adventure.on_a_rail.description": "Obtain a Minecart to travel via rails",
-  "advancements.xoverhaul.adventure.on_a_rail.title": "On A Rail",
+  "advancements.xoverhaul.redstone.on_a_rail.description": "Obtain a Minecart to travel via rails",
+  "advancements.xoverhaul.redstone.on_a_rail.title": "On A Rail",
   "advancements.xoverhaul.adventure.overkill.description": "Deal 9 (or more) hearts of damage in a single hit",
   "advancements.xoverhaul.adventure.overkill.title": "Overkill",
   "advancements.xoverhaul.adventure.overpowered.description": "Obtain an Enchanted Golden Apple",
@@ -33,8 +33,18 @@
   "advancements.xoverhaul.story.hot_topic.title": "Hot Topic",
   "advancements.xoverhaul.story.librarian.description": "Craft some Bookshelves to place around your Enchanting Table to improve it",
   "advancements.xoverhaul.story.librarian.title": "Librarian",
-  "advancements.xoverhaul.adventure.dispense_this.description": "Obtain a Dispenser",
-  "advancements.xoverhaul.adventure.dispense_this.title": "Dispense This!",
+  "advancements.xoverhaul.redstone.dispense_this.description": "Obtain a Dispenser",
+  "advancements.xoverhaul.redstone.dispense_this.title": "Dispense This!",
+  "advancements.xoverhaul.redstone.root.description": "Engineer your way through these advancements",
+  "advancements.xoverhaul.redstone.root.title": "Redstone",
+  "advancements.xoverhaul.building.root.description": "Become a great builder",
+  "advancements.xoverhaul.building.root.title": "Building",
+  "advancements.xoverhaul.adventure.ahoy.description": "Find a shipwreck",
+  "advancements.xoverhaul.adventure.ahoy.title": "Ahoy!",
+  "advancements.xoverhaul.husbandry.iron_belly.description": "Stop starvation using Rotten Flesh",
+  "advancements.xoverhaul.husbandry.iron_belly.title": "Iron Belly",
+  "advancements.xoverhaul.building.pot_planter.description": "Place a Flower Pot",
+  "advancements.xoverhaul.building.pot_planter.title": "Pot Planter",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
