more advancements, updated fabric

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -45,6 +45,12 @@
   "advancements.xoverhaul.husbandry.iron_belly.title": "Iron Belly",
   "advancements.xoverhaul.building.pot_planter.description": "Place a Flower Pot",
   "advancements.xoverhaul.building.pot_planter.title": "Pot Planter",
+  "advancements.xoverhaul.adventure.the_haggler.description": "Obtain 30 Emeralds",
+  "advancements.xoverhaul.adventure.the_haggler.title": "The Haggler",
+  "advancements.xoverhaul.adventure.feeling_ill.description": "Defeat an Evoker",
+  "advancements.xoverhaul.adventure.feeling_ill.title": "Feeling Ill",
+  "advancements.xoverhaul.adventure.me_gold.description": "Dig up a buried treasure",
+  "advancements.xoverhaul.adventure.me_gold.title": "Me Gold!",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
