--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -51,7 +51,7 @@
   "advancements.xoverhaul.adventure.feeling_ill.title": "Feeling Ill",
   "advancements.xoverhaul.adventure.me_gold.description": "Dig up a buried treasure",
   "advancements.xoverhaul.adventure.me_gold.title": "Me Gold!",
-  "advancements.xoverhaul.progression.beach_cleaner.description": "Use a Water Bottle on a Dirty Sand block.\n Unimplemented because of MC-184263",
+  "advancements.xoverhaul.progression.beach_cleaner.description": "Use a Water Bottle on a Dirty Sand block.",
   "advancements.xoverhaul.progression.beach_cleaner.title": "Beach Cleaner",
   "advancements.xoverhaul.husbandry.time_for_stew.description": "Drop a Suspicious Stew, then have a player or a mob pick it up",
   "advancements.xoverhaul.husbandry.time_for_stew.title": "Time for Stew",
