elder guardian and evoker now have a boss bar

--- a/src/main/resources/assets/xoverhaul/lang/en_us.json
+++ b/src/main/resources/assets/xoverhaul/lang/en_us.json
@@ -57,6 +57,8 @@
   "advancements.xoverhaul.husbandry.time_for_stew.title": "Time for Stew",
   "advancements.xoverhaul.adventure.kill_the_beast.description": "Defeat a Ravager",
   "advancements.xoverhaul.adventure.kill_the_beast.title": "Kill the Beast",
+  "advancements.xoverhaul.husbandry.zoologist.description": "Breed two Pandas with Bamboo.\nDon't let them go extinct!",
+  "advancements.xoverhaul.husbandry.zoologist.title": "Zoologist",
 
   "block.xoverhaul.basalt_slab": "Basalt Slab",
   "block.xoverhaul.basalt_stairs": "Basalt Stairs",
